sync mechanism init

--- a/.env
+++ b/.env
@@ -1,2 +1,14 @@
 DATABASE_URL=postgis://macbook:root@localhost:5432/cb_plus
 DEBUG=True
+
+
+# DATABASES = {
+#    'default': {
+#         'ENGINE': 'django.db.backends.postgresql',
+#         'NAME': 'cb_plus',
+#         'USER': 'macbook',
+#         'PASSWORD': 'root',
+#         'HOST': 'localhost',
+#         'PORT': '5432',
+#     }
+# }
